# Consistent-formation-control-algorithm

./: CMakeLists.txt  README.md  package.xml
bag_file/DMPC1/: metadata.yaml  rosbag2_2022_04_03-13_59_51_0.db3
bag_file/DMPC2/: metadata.yaml  rosbag2_2022_04_03-14_10_26_0.db3
bag_file/DMPC3/: metadata.yaml  rosbag2_2022_04_03-14_12_14_0.db3
bag_file/PID/: metadata.yaml  rosbag2_2022_04_03-14_14_35_0.db3
config/: README.txt  lqrCost.info  mpcCost.info
include/: Main_Controler.hpp
include/three_aircraft_control/: Distributed_Controller.hpp  Main_Controler.hpp  PIDControler.hpp  exampleDir.h  my_mpc.hpp  sim_car_system.hpp
launch/: t_a_c.py  test.py
model/my_robot/: model.config  model.sdf
model/my_sensor/: model.config  model.sdf
msg/: Offsets.msg
src/: Distributed_Controller.cpp  Main_Controler.cpp  test.cpp  three_aircraft_control.cpp
test_video/: DMPC.webm  MPC+Consistent(up).webm  PID（下方）与位置控制（上方）对比.webm  横行一字编队.webm  编队变换.webm
world/: three_aircraft_formation.world
